<resources>
    <string name="app_name">Discador Delivery</string>
    <string name="versao">Versão: 0.9 (Beta)</string>


    <string name="action_settings">Settings</string>
    <string name="ajude">Alguma loja com informação errada?</string>
    <string name="domingo">Domingo</string>
    <string name="segunda">Segunda</string>
    <string name="terca">Terca</string>
    <string name="quarta">Quarta</string>
    <string name="quinta">Quinta</string>
    <string name="sexta">Sexta</string>
    <string name="sabado">Sabado</string>
    <string name="descricao">Informações sobre a empresa : VAZIO</string>
    <string name="endereco">Endereço: </string>
    <string name="action_search">Pesquisar</string>
    <string name="sobre">Sobre</string>
    <string name="title_activity_sobre">Sobre</string>
    <string name="cabelhacoSobre">SOBRE :</string>
    <string name="maisLoja">Envie informações para nos</string>
    <string name="objetivo">Este aplicativo foi criado para facilitar as ligações para as empresas que fazem serviço de entrega na cidade.</string>
    <string name="explicacao">Sempre quando precisamos de uma telefone, seja para pedir uma pizza ou um gas, não temos informações sobre as empresas, então surge o Disque Delivery</string>
    <string name="title_activity_web_view">WebView</string>
    <string name="ajudeDinheiro">Ajude a desenvover doando</string>
    <string name="email">Comunique uma falha</string>
    <string name="title_activity_email">EmailActivity</string>

    <string name="hello_world">Hello world!</string>

</resources>
