<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lfelipeeb.testes.activity.Sobre"
    android:gravity="center">

    <include layout="@layout/toolbar" android:layout_gravity="top"
        android:layout_height="wrap_content" android:layout_width="match_parent" />

    <LinearLayout android:layout_gravity="center" android:orientation="vertical"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginBottom="?attr/actionBarSize">

        <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_weight="2"
            android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/primaryText"
                android:text="@string/cabelhacoSobre" android:textAppearance="?android:attr/textAppearanceLarge"
                android:textAlignment="center" android:textStyle="bold" android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="fill"
                />

            <Space
                android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1"/>


            <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/primaryText"
                android:text="@string/objetivo" android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/primaryText"
                android:text="@string/explicacao" android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center_horizontal" />

            <TextView android:id="@+id/tvVersao"
                android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/primaryText"
                android:text="@string/versao" android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1"/>

        <LinearLayout android:id="@+id/github"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" android:layout_weight="2">
            <ImageView android:src="@drawable/github"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" />
            <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="GitHub"
                android:layout_gravity="center_vertical" />
        </LinearLayout>
        <LinearLayout android:id="@+id/wordpress"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="2">
            <ImageView android:src="@drawable/wordpress"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" />
            <TextView android:gravity="center"
                android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Blog do Desenvolvedor"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/ajudeDinheiro"
            android:id="@+id/doacao"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp" />

    </LinearLayout>

    <include layout="@layout/toolbar_bottom" android:layout_gravity="bottom"
        android:layout_width="match_parent" android:layout_height="wrap_content"/>

</FrameLayout>
