<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <include layout="@layout/toolbar" android:layout_gravity="top"
        android:layout_height="112dp" android:layout_width="match_parent" />

    <include layout="@layout/fabutton" android:id="@+id/fab" android:background="?attr/selectableItemBackground"
        android:layout_height="wrap_content" android:layout_width="wrap_content"
        android:layout_gravity="bottom|right"  android:layout_alignEnd="@+id/toolbar"
        android:layout_marginRight="16dp" android:layout_marginBottom="16dp" android:clickable="true"  />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:layout_gravity="center" android:layout_marginLeft="16dp" android:layout_marginRight="16dp"
        android:layout_marginBottom="?attr/actionBarSize" android:layout_marginTop="100dp">

        <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="@color/primaryColor"
            android:text="Não Informado" android:layout_marginLeft="16dp"
            android:id="@+id/aberto"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="2"
            />

        <LinearLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Dias de funcionamento:"
                android:id="@+id/textView"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/primaryText" />

            <HorizontalScrollView
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_weight="1">

                <LinearLayout android:id="@+id/layoutDiaSemana"
                    android:orientation="horizontal"
                    android:layout_width="fill_parent" android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_vertical">
                    <View
                        android:layout_width="1dp" android:layout_height="fill_parent" android:background="@color/primaryText"/>
                    <TextView
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:text="@string/domingo"
                        android:id="@+id/domingo" />
                    <View
                        android:layout_width="1dp" android:layout_height="fill_parent" android:background="@color/primaryText"/>
                    <TextView
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:text="@string/segunda"
                        android:id="@+id/segunda" />
                    <View
                        android:layout_width="1dp" android:layout_height="fill_parent" android:background="@color/primaryText"/>
                    <TextView
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:text="@string/terca"
                        android:id="@+id/terca" />
                    <View
                        android:layout_width="1dp" android:layout_height="fill_parent" android:background="@color/primaryText"/>
                    <TextView
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:text="@string/quarta"
                        android:id="@+id/quarta" />
                    <View
                        android:layout_width="1dp" android:layout_height="fill_parent" android:background="@color/primaryText"/>
                    <TextView
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:text="@string/quinta"
                        android:id="@+id/quinta" />
                    <View
                        android:layout_width="1dp" android:layout_height="fill_parent" android:background="@color/primaryText"/>
                    <TextView
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:text="@string/sexta"
                        android:id="@+id/sexta" />
                    <View
                        android:layout_width="1dp" android:layout_height="fill_parent" android:background="@color/primaryText"/>
                    <TextView
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:text="@string/sabado"
                        android:id="@+id/sabado" />
                    <View
                        android:layout_width="1dp" android:layout_height="fill_parent" android:background="@color/primaryText"/>
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_gravity="bottom" android:gravity="center_horizontal"
            android:layout_weight="1"
            android:fillViewport="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_horizontal">
                    <TextView
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="@string/descricao"
                        android:id="@+id/descricao" android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_gravity="center" android:textAlignment="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_weight="2"
                        android:text="@string/endereco"
                        android:id="@+id/endereco" />

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3" android:id="@+id/radioGrup">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="telefone"
                            android:id="@+id/telefone" />
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="celular"
                            android:id="@+id/celular" />
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="tim"
                            android:id="@+id/tim" />
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="vivo"
                            android:id="@+id/vivo" />
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="claro"
                            android:id="@+id/claro" />
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="oi"
                            android:id="@+id/oi" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</FrameLayout>
